fix: change align sponsor text

--- a/src/assets/style/homepages.css
+++ b/src/assets/style/homepages.css
@@ -478,6 +478,11 @@
         padding: 40px 20px;
         flex-direction: column;
     }
+
+    .list-sponsor > span {
+        text-align: center;
+    }
+
     
     .list-disciplines > .container > .overlay {
         left: 20px;
